k8s/require-azure-databases-us-east1-region.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    policy-intent/description: Databases in Azure should always run in the us-east1
      region
    policy-intent/rationale: Ensures data residency compliance and reduces latency
      for US-based applications. Running databases in us-east1 provides optimal performance
      for primary workloads and meets regulatory requirements for data locality.
  labels:
    policy-intent/id: 65c8d83d-f377-4664-b55c-89566a225784
  name: require-azure-databases-us-east1-region
spec:
  rules:
  - match:
      any:
      - resources:
          kinds:
          - dbforpostgresql.azure.m.upbound.io/v1beta1/Server
          namespaces:
          - a-team
          - b-team
          operations:
          - CREATE
          - UPDATE
    name: validate-postgresql-server-location-v1beta1-managed
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      cel:
        expressions:
        - expression: has(object.spec.forProvider.location) && object.spec.forProvider.location
            == 'East US'
          message: Azure PostgreSQL Server must be deployed in the 'East US' region
            (us-east1) for data residency compliance and optimal performance for US-based
            applications
        - expression: 'has(object.spec.initProvider.location) ? object.spec.initProvider.location
            == ''East US'' : true'
          message: Azure PostgreSQL Server initProvider location must be 'East US'
            region (us-east1) when specified
        generate: false
  - match:
      any:
      - resources:
          kinds:
          - dbforpostgresql.azure.upbound.io/v1beta2/Server
          namespaces:
          - a-team
          - b-team
          operations:
          - CREATE
          - UPDATE
    name: validate-postgresql-server-location-v1beta2-managed
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      cel:
        expressions:
        - expression: has(object.spec.forProvider.location) && object.spec.forProvider.location
            == 'East US'
          message: Azure PostgreSQL Server must be deployed in the 'East US' region
            (us-east1) for data residency compliance and optimal performance for US-based
            applications
        - expression: 'has(object.spec.initProvider.location) ? object.spec.initProvider.location
            == ''East US'' : true'
          message: Azure PostgreSQL Server initProvider location must be 'East US'
            region (us-east1) when specified
        generate: false
  - match:
      any:
      - resources:
          kinds:
          - dbforpostgresql.azure.upbound.io/v1beta2/FlexibleServer
          namespaces:
          - a-team
          - b-team
          operations:
          - CREATE
          - UPDATE
    name: validate-postgresql-flexibleserver-location-v1beta2-managed
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      cel:
        expressions:
        - expression: has(object.spec.forProvider.location) && object.spec.forProvider.location
            == 'East US'
          message: Azure PostgreSQL Flexible Server must be deployed in the 'East
            US' region (us-east1) for data residency compliance and optimal performance
            for US-based applications
        - expression: 'has(object.spec.initProvider.location) ? object.spec.initProvider.location
            == ''East US'' : true'
          message: Azure PostgreSQL Flexible Server initProvider location must be
            'East US' region (us-east1) when specified
        generate: false
  - match:
      any:
      - resources:
          kinds:
          - dbforpostgresql.azure.m.upbound.io/v1beta1/FlexibleServer
          namespaces:
          - a-team
          - b-team
          operations:
          - CREATE
          - UPDATE
    name: validate-postgresql-flexibleserver-location-v1beta1-managed
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      cel:
        expressions:
        - expression: has(object.spec.forProvider.location) && object.spec.forProvider.location
            == 'East US'
          message: Azure PostgreSQL Flexible Server must be deployed in the 'East
            US' region (us-east1) for data residency compliance and optimal performance
            for US-based applications
        - expression: 'has(object.spec.initProvider.location) ? object.spec.initProvider.location
            == ''East US'' : true'
          message: Azure PostgreSQL Flexible Server initProvider location must be
            'East US' region (us-east1) when specified
        generate: false
  validationFailureAction: Enforce
